# shade-launchpad-indexer

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: factories.toml  indexer.toml  prometheus.yml
crates/shade-indexer-bin/: Cargo.toml
crates/shade-indexer-bin/src/: cli.rs  config.rs  health.rs  main.rs  pipeline.rs
crates/shade-indexer-bin/src/commands/: backfill.rs  decode_tx.rs  inspect_config.rs  migrate.rs  mod.rs  serve.rs
crates/shade-indexer-bytecode/: Cargo.toml
crates/shade-indexer-bytecode/src/: bloom.rs  flags.rs  lib.rs  scan.rs  signatures.rs
crates/shade-indexer-core/: Cargo.toml
crates/shade-indexer-core/src/: decode.rs  error.rs  lib.rs  registry.rs  subscriber.rs  types.rs
crates/shade-indexer-enrich/: Cargo.toml
crates/shade-indexer-enrich/src/: lib.rs  metrics.rs  rpc_source.rs  store.rs  worker.rs
crates/shade-indexer-kafka/: Cargo.toml
crates/shade-indexer-kafka/src/: lib.rs  producer.rs
migrations/: 0001_init.sql
sdk/typescript/: package.json  pnpm-lock.yaml  tsconfig.json
sdk/typescript/examples/: consume.ts
sdk/typescript/src/: client.ts  index.ts  schema.ts
