[package]
name = "shade-indexer-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "shade-launchpad-indexer service binary."

[[bin]]
name = "shade-indexer"
path = "src/main.rs"

[dependencies]
shade-indexer-core     = { path = "../shade-indexer-core" }
shade-indexer-kafka    = { path = "../shade-indexer-kafka" }
shade-indexer-enrich   = { path = "../shade-indexer-enrich" }
shade-indexer-bytecode = { path = "../shade-indexer-bytecode" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
arc-swap = { workspace = true }
chrono = { workspace = true }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
