[package]
name = "shade-indexer-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Multi-launchpad event subscription and decoding for Base."

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
