[package]
name = "shade-indexer-enrich"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Postgres-backed enrichment worker (holders, liquidity, lock check)."

[dependencies]
shade-indexer-core     = { path = "../shade-indexer-core" }
shade-indexer-bytecode = { path = "../shade-indexer-bytecode" }
tokio = { workspace = true }
async-trait = { workspace = true }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
